[package]
name = "dec19x5"
edition = "2018"
version = "0.2.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]

[dependencies]
num-traits = { version = "0.2", optional = true }
serde = { version = "1", optional = true }
tiberius = { version = "0.5", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = []
