[package]
name = "dec19x5"
edition = "2021"
version = "1.8.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
publish = false

[dependencies]
num-traits = { version = "0.2", optional = true }
serde_crate = { version = "1", features = ["derive"], optional = true, package = "serde" }
serde_json = { version = "1", optional = true }
tiberius = { version = "0.12", default_features = false, optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = []
serde = ["serde_crate", "serde_json"]
